--- a/index.html
+++ b/index.html
@@ -690,13 +690,13 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										class="ekit-heading elementskit-section-title-wraper text_center   ekit_heading_tablet-   ekit_heading_mobile-">
 										<a href="timebestilling/index.html" target="_blank">
 											<h1 class="ekit-heading--title elementskit-section-title ">Alex Frisør&#039;s
-												 i Tønsberg – <span><span>Velvære frisørsalong</span></span></h1>
+												<span><span>Velvære Salong</span></span></h1>
 										</a>
 										<h2 class="ekit-heading--subtitle elementskit-section-subtitle  ">
 											Rett I Sentrum av Tønsberg
 										</h2>
 										<div class='ekit-heading__description'>
-											<p>Alex Frisør&#039;s velkommen til rimelige priser </p>
+											<p>Alex Frisør&#039;s - svært rimelige priser </p>
 										</div>
 									</div>
 								</div>
