--- a/index.html
+++ b/index.html
@@ -656,8 +656,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 					<div class="ekit-wid-con">
 						<div class="ekit-btn-wraper">
 							<a href="timebestilling/index.html" class="elementskit-btn  whitespace--normal"
-								id=heederbook>
-
+								id="heederbook">
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
@@ -2331,8 +2330,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="star-rating.default">
 											<div class="elementor-widget-container">
 												<style>
-													@charset "UTF-8";
-
+													
 													.elementor-star-rating {
 														color: #ccd6df;
 														font-family: eicons;
