--- a/index.html
+++ b/index.html
@@ -748,7 +748,6 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											<p>Time bestille </p>
 										</div>
 
-
 									</div>
 								</a>
 							</div>
@@ -2879,12 +2878,17 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">
 						<div class="ekit-btn-wraper">
-							<a class="elementskit-btn  whitespace--normal" id=footerbook>
-
+							<a class="elementskit-btn  whitespace--normal" id="footerbook">
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
+						<div class="ekit-btn-wraper">
+							<a class="elementskit-btn  whitespace--normal" id="footerbook">
+								<i aria-hidden="true" class="fas fa-cut"></i>
+								Ringe oss </a>
+						</div>
 					</div>
+					<h3>Se alle våre Prisliste</h3>
 				</div>
 			</div>
 		</header>
