--- a/index.html
+++ b/index.html
@@ -660,6 +660,13 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
+						<div class="ekit-btn-wraper">
+							<a class="elementskit-btn  whitespace--normal" id="footerbook">
+								<i aria-hidden="true" class="fas fa-cut"></i>
+								Ringe oss </a>
+						</div>
+					</div>
+					<h3>Se alle våre Prisliste</h3>
 					</div>
 				</div>
 			</div>
@@ -2870,7 +2877,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				data-id="d8e4181" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h6 class="elementor-heading-title elementor-size-default"><a
-							href="http://bedrift-hjemmeside.no/">utviklet og drift av Bedrift-hjemmeside.no</a></h6>
+							href="http://bedrift-hjemmeside.no/">utviklet & drift av ALTLOKAL.no</a></h6>
 				</div>
 			</div>
 			<div class="elementor-element elementor-element-302ba0fa elementor-widget__width-auto elementor-widget elementor-widget-elementskit-button"
@@ -2882,13 +2889,6 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
-						<div class="ekit-btn-wraper">
-							<a class="elementskit-btn  whitespace--normal" id="footerbook">
-								<i aria-hidden="true" class="fas fa-cut"></i>
-								Ringe oss </a>
-						</div>
-					</div>
-					<h3>Se alle våre Prisliste</h3>
 				</div>
 			</div>
 		</header>
