--- a/index.html
+++ b/index.html
@@ -660,6 +660,14 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
+						<div class="elementor-button-wrapper">
+							<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
+								href="timebestilling/index.html" target="_blank" id="bestill_hjemmeside">
+								<span class="elementor-button-content-wrapper">
+									<span class="elementor-button-text">Ringe oss</span>
+								</span>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -688,8 +696,10 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 									<div
 										class="ekit-heading elementskit-section-title-wraper text_center   ekit_heading_tablet-   ekit_heading_mobile-">
 										<a href="timebestilling/index.html" target="_blank">
-											<h1 class="ekit-heading--title elementskit-section-title ">Alex Frisør&#039;s
-												<span><span>Velvære Salong</span></span></h1>
+											<h1 class="ekit-heading--title elementskit-section-title ">Alex
+												Frisør&#039;s
+												<span><span>Velvære Salong</span></span>
+											</h1>
 										</a>
 										<h2 class="ekit-heading--subtitle elementskit-section-subtitle  ">
 											Rett I Sentrum av Tønsberg
@@ -714,23 +724,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										</span>
 									</a>
 								</div>
-								<div class="elementor-button-wrapper">
-									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
-										href="timebestilling/index.html" target="_blank" id="bestill_hjemmeside">
-										<span class="elementor-button-content-wrapper">
-											<span class="elementor-button-text">Ringe oss</span>
-										</span>
-									</a>
-								</div>
 
-
-								<div class="ekit-btn-wraper">
-							<a class="elementskit-btn  whitespace--normal" id="footerbook">
-								<i aria-hidden="true" class="fas fa-cut"></i>
-								Ringe oss </a>
-						</div>
-					</div>
-					<h3>Se alle våre Prisliste</h3>
 							</div>
 						</div>
 					</div>
@@ -2336,8 +2330,10 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 														class="ekit-heading elementskit-section-title-wraper text_right   ekit_heading_tablet-   ekit_heading_mobile-">
 														<a href="https://goo.gl/maps/JZcdEyrhzMmZt4UW7">
 															<h2 class="ekit-heading--title elementskit-section-title ">5
-																<span><span>av 5</span></span></h2>
-														</a></div>
+																<span><span>av 5</span></span>
+															</h2>
+														</a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -2346,7 +2342,6 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="star-rating.default">
 											<div class="elementor-widget-container">
 												<style>
-													
 													.elementor-star-rating {
 														color: #ccd6df;
 														font-family: eicons;
@@ -2899,8 +2894,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
+					</div>
 				</div>
-			</div>
 		</header>
 	</div>
 
