--- a/index.html
+++ b/index.html
@@ -714,6 +714,15 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										</span>
 									</a>
 								</div>
+								<h1>Sjekk våre #Prisliste</h1>
+								<div class="elementor-button-wrapper">
+									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
+										href="timebestilling/index.html" target="_blank" id="bestill_hjemmeside">
+										<span class="elementor-button-content-wrapper">
+											<span class="elementor-button-text">Ringe oss</span>
+										</span>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
