--- a/index.html
+++ b/index.html
@@ -715,6 +715,15 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										</span>
 									</a>
 								</div>
+								<h1 class="ekit-heading--subtitle elementskit-section-subtitle  ">Sjekk Prising</h1>
+								<div class="elementor-button-wrapper">
+									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
+										href="timebestilling/index.html" target="_blank" id="bestill_hjemmeside">
+										<span class="elementor-button-content-wrapper">
+											<span class="elementor-button-text">Ringe oss</span>
+										</span>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -804,7 +813,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										</div>
 										<div class="box-body">
 											<h4 class="elementskit-info-box-title">
-												Man-Fre​ 10:00 - 21:00​ </h4>
+												Man-Fre​ 12:00 - 20:00​ </h4>
 											<p>Lørdag​ 09:00 - 19:00​</p>
 										</div>
 
@@ -1569,7 +1578,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<span
-													class="elementor-heading-title elementor-size-default">499KR</span>
+													class="elementor-heading-title elementor-size-default">300KR</span>
 											</div>
 										</div>
 									</div>
@@ -1588,7 +1597,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<h3 class="elementor-heading-title elementor-size-default">
-													Skin-fade</h3>
+													Dameklipp</h3>
 											</div>
 										</div>
 										<div class="elementor-element elementor-element-d7f3528 elementor-widget__width-initial elementor-widget-divider--view-line elementor-widget elementor-widget-divider"
@@ -1620,7 +1629,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<span
-													class="elementor-heading-title elementor-size-default">499KR</span>
+													class="elementor-heading-title elementor-size-default">350KR</span>
 											</div>
 										</div>
 									</div>
@@ -1670,7 +1679,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<span
-													class="elementor-heading-title elementor-size-default">898KR</span>
+													class="elementor-heading-title elementor-size-default">499KR</span>
 											</div>
 										</div>
 									</div>
@@ -1707,7 +1716,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<p class="elementor-heading-title elementor-size-default">Barneklipp
-													299kr Barneklipp opptil 8 år</p>
+													200kr Barneklipp opptil 8 år</p>
 											</div>
 										</div>
 									</div>
@@ -1720,7 +1729,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<span
-													class="elementor-heading-title elementor-size-default">299KR</span>
+													class="elementor-heading-title elementor-size-default">200KR</span>
 											</div>
 										</div>
 									</div>
@@ -1757,7 +1766,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<p class="elementor-heading-title elementor-size-default">Barneklipp
-													349kr Barneklipp fra 9 år opptil 13 år</p>
+													250kr Barneklipp fra 9 år opptil 13 år</p>
 											</div>
 										</div>
 									</div>
@@ -1770,7 +1779,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<span
-													class="elementor-heading-title elementor-size-default">349KR</span>
+													class="elementor-heading-title elementor-size-default">250KR</span>
 											</div>
 										</div>
 									</div>
@@ -1825,7 +1834,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<span
-													class="elementor-heading-title elementor-size-default">349KR</span>
+													class="elementor-heading-title elementor-size-default">300KR</span>
 											</div>
 										</div>
 									</div>
@@ -1875,7 +1884,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<span
-													class="elementor-heading-title elementor-size-default">399KR</span>
+													class="elementor-heading-title elementor-size-default">150KR</span>
 											</div>
 										</div>
 									</div>
@@ -2620,8 +2629,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 						data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:250}"
 						data-widget_type="heading.default">
 						<div class="elementor-widget-container">
-							<h2 class="elementor-heading-title elementor-size-default">Amigo's Barbershop
-								AS<br>Gulskogen Kjøpe Senter</h2>
+							<h2 class="elementor-heading-title elementor-size-default">Alex Frisør's
+								<br>Velvære Salong</h2>
 						</div>
 					</div>
 					<div class="elementor-element elementor-element-77f808fc e-con-full e-flex elementor-invisible e-con"
@@ -2649,8 +2658,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 												</div>
 												<div class="box-body">
 													<h4 class="elementskit-info-box-title">
-														Gullskogen kjøpe senter 1 Etasje </h4>
-													<p>Guldlisten 35, 3048 Drammen</p>
+														Rett I Sentrum av Tønsberg </h4>
+													<p>Storgata 35, 3248 Tønsberg</p>
 												</div>
 
 
@@ -2758,44 +2767,44 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										<div class="ekit-business-hours-inner">
 											<div class="ekit-single-day elementor-repeater-item-3d868c3 ">
 												<span class="ekit-business-day">Mandag </span>
-												<span class="ekit-business-time">10:00 - 21:00
+												<span class="ekit-business-time">12:00 - 20:00
 
 												</span>
 											</div>
 											<div class="ekit-single-day elementor-repeater-item-d9507d8 ">
 												<span class="ekit-business-day">Tirsdag</span>
-												<span class="ekit-business-time">10:00 - 21:00
+												<span class="ekit-business-time">12:00 - 20:00
 
 												</span>
 											</div>
 											<div class="ekit-single-day elementor-repeater-item-2bd32b9 ">
 												<span class="ekit-business-day">Onsdag</span>
-												<span class="ekit-business-time">10:00 - 21:00
+												<span class="ekit-business-time">12:00 - 20:00
 
 												</span>
 											</div>
 											<div class="ekit-single-day elementor-repeater-item-2f00b7b ">
 												<span class="ekit-business-day">Torsdag</span>
-												<span class="ekit-business-time">10:00 - 21:00
+												<span class="ekit-business-time">12:00 - 20:00
 
 												</span>
 											</div>
 											<div class="ekit-single-day elementor-repeater-item-f29b69e ">
 												<span class="ekit-business-day">Fredag</span>
-												<span class="ekit-business-time">10:00 - 21:00
+												<span class="ekit-business-time">12:00 - 20:00
 
 												</span>
 											</div>
 											<div class="ekit-single-day elementor-repeater-item-687ddb6 ">
 												<span class="ekit-business-day">Sat: </span>
 												<span class="ekit-business-time">
-													09:00 - 19:00
+													12:00 - 20:00
 												</span>
 											</div>
 											<div
 												class="ekit-single-day elementor-repeater-item-2fa8e36 ekit-closed-day">
 												<span class="ekit-business-day">Søndag</span>
-												<span class="ekit-business-time">STENGT</span>
+												<span class="ekit-business-time">12:00 - 20:00</span>
 											</div>
 										</div>
 									</div>
