--- a/index.html
+++ b/index.html
@@ -784,8 +784,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										</div>
 										<div class="box-body">
 											<h4 class="elementskit-info-box-title">
-												Gulskogen Senter 1 ets </h4>
-											<p>Guldlisten 35, 3048 Drammen</p>
+												Rett i midt av sentrum </h4>
+											<p>Storgata 35, 3248 Tønsberg</p>
 										</div>
 
 
