--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										</span>
 									</a>
 								</div>
-								<h1 class="ekit-heading--subtitle elementskit-section-subtitle  ">Sjekk Prising</h1>
+								<h3 class="ekit-heading--subtitle elementskit-section-subtitle  ">Billig Klipping</h3>
 								<div class="elementor-button-wrapper">
 									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
 										href="timebestilling/index.html" target="_blank" id="bestill_hjemmeside">
