--- a/index.html
+++ b/index.html
@@ -1106,10 +1106,10 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										<div class="elementor-counter-number-wrapper">
 											<span class="elementor-counter-number-prefix"></span>
 											<span class="elementor-counter-number" data-duration="2000"
-												data-to-value="3568" data-from-value="1" data-delimiter=".">1</span>
+												data-to-value="3568" data-from-value="1" data-delimiter=".">0</span>
 											<span class="elementor-counter-number-suffix"></span>
 										</div>
-										<div class="elementor-counter-title">Hoder blitt Klippet</div>
+										<div class="elementor-counter-title">Fornøy Kunder</div>
 									</div>
 								</div>
 							</div>
@@ -1145,7 +1145,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 												data-from-value="1" data-delimiter=".">1</span>
 											<span class="elementor-counter-number-suffix"></span>
 										</div>
-										<div class="elementor-counter-title">Professional Barbers</div>
+										<div class="elementor-counter-title">Profesjonel Frisør</div>
 									</div>
 								</div>
 							</div>
@@ -1160,7 +1160,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										<div class="elementor-counter-number-wrapper">
 											<span class="elementor-counter-number-prefix"></span>
 											<span class="elementor-counter-number" data-duration="100"
-												data-to-value="12" data-from-value="1" data-delimiter=".">1</span>
+												data-to-value="12" data-from-value="1" data-delimiter=".">2</span>
 											<span class="elementor-counter-number-suffix"></span>
 										</div>
 										<div class="elementor-counter-title">År erfaring </div>
