--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 												data-to-value="3568" data-from-value="1" data-delimiter=".">0</span>
 											<span class="elementor-counter-number-suffix"></span>
 										</div>
-										<div class="elementor-counter-title">Fornøy Kunder</div>
+										<div class="elementor-counter-title">Fornøyde Kunder</div>
 									</div>
 								</div>
 							</div>
