--- a/index.html
+++ b/index.html
@@ -2880,7 +2880,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				data-id="d8e4181" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h6 class="elementor-heading-title elementor-size-default"><a
-							href="http://bedrift-hjemmeside.no/">utviklet & drift av ALTLOKAL.no</a></h6>
+							href="http://altlokal.no/">utviklet & drift av ALTLOKAL.no</a></h6>
 				</div>
 			</div>
 			<div class="elementor-element elementor-element-302ba0fa elementor-widget__width-auto elementor-widget elementor-widget-elementskit-button"
