--- a/index.html
+++ b/index.html
@@ -594,19 +594,19 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								class="elementskit-navbar-nav elementskit-menu-po-center submenu-click-on-icon">
 								<li id="menu-item-499"
 									class="menu-item menu-item-type-custom menu-item-object-custom menu-item-499 nav-item elementskit-mobile-builder-content"
-									data-vertical-menu=750px><a href="kunde-side/index.html"
+									data-vertical-menu="750px"><a href="kunde-side/index.html"
 										class="ekit-menu-nav-link">Kunde Side</a></li>
 								<li id="menu-item-508"
 									class="menu-item menu-item-type-custom menu-item-object-custom menu-item-508 nav-item elementskit-mobile-builder-content"
-									data-vertical-menu=750px><a href="nettbutikk/index.html"
+									data-vertical-menu="750px"><a href="nettbutikk/index.html"
 										class="ekit-menu-nav-link">Nettbutikk</a></li>
 								<li id="menu-item-782"
 									class="menu-item menu-item-type-custom menu-item-object-custom menu-item-782 nav-item elementskit-mobile-builder-content"
-									data-vertical-menu=750px><a href="#Prisliste" class="ekit-menu-nav-link">Pris
+									data-vertical-menu="750px"><a href="#Prisliste" class="ekit-menu-nav-link">Pris
 										Liste</a></li>
 								<li id="menu-item-786"
 									class="menu-item menu-item-type-custom menu-item-object-custom menu-item-786 nav-item elementskit-mobile-builder-content"
-									data-vertical-menu=750px><a href="#open" class="ekit-menu-nav-link">Åpningstider</a>
+									data-vertical-menu="750px"><a href="#open" class="ekit-menu-nav-link">Åpningstider</a>
 								</li>
 							</ul>
 							<div class="elementskit-nav-identity-panel"><button
