--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 							<div class="elementor-widget-container">
 								<div class="elementor-button-wrapper">
 									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
-										href="timebestilling/index.html" target="_blank" id="bestill_hjemmeside">
+										href="+4796984038" target="_blank" id="bestill_hjemmeside">
 										<span class="elementor-button-content-wrapper">
 											<span class="elementor-button-text">Bestill Time</span>
 										</span>
@@ -718,7 +718,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								<h3 class="ekit-heading--subtitle elementskit-section-subtitle  ">Billig Klipping</h3>
 								<div class="elementor-button-wrapper">
 									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
-										href="timebestilling/index.html" target="_blank" id="bestill_hjemmeside">
+										href="+4796984038" target="_blank" id="bestill_hjemmeside">
 										<span class="elementor-button-content-wrapper">
 											<span class="elementor-button-text">Ringe oss</span>
 										</span>
