--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">
 						<div class="ekit-btn-wraper">
-							<a href="timebestilling/index.html" class="elementskit-btn  whitespace--normal"
+							<a href="+4796984038" class="elementskit-btn  whitespace--normal"
 								id="heederbook">
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
@@ -2888,7 +2888,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">
 						<div class="ekit-btn-wraper">
-							<a class="elementskit-btn  whitespace--normal" id="footerbook">
+							<a class="elementskit-btn  whitespace--normal" id="footerbook" src="4796984038">
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
