--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 						data-id="28e2e898" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
 						<div class="elementor-widget-container">
 							<div class="ekit-wid-con"> <!-- link opening -->
-								<a href="tel:40553595" class="ekit_global_links">
+								<a href="+4796984038" class="ekit_global_links">
 									<!-- end link opening -->
 
 									<div
@@ -2673,7 +2673,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="tel:40553595" class="ekit_global_links">
+										<a href="+4796984038" class="ekit_global_links">
 											<!-- end link opening -->
 
 											<div
@@ -2888,7 +2888,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">
 						<div class="ekit-btn-wraper">
-							<a class="elementskit-btn  whitespace--normal" id="footerbook" src="4796984038">
+							<a class="elementskit-btn  whitespace--normal" id="footerbook" href="+4796984038">
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
