--- a/index.html
+++ b/index.html
@@ -702,35 +702,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								</div>
 							</div>
 						</div>
-						<div class="elementor-element elementor-element-3b271e02 elementor-align-center elementor-invisible elementor-widget elementor-widget-button"
-							data-id="3b271e02" data-element_type="widget"
-							data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:250}"
-							data-widget_type="button.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-button-wrapper">
-									<a 
-										href="+4796984038" target="_blank" id="bestill_hjemmeside">
-										<span class="elementor-button-content-wrapper">
-											<span class="elementor-button-text">Bestill Time</span>
-										</span>
-									</a>
-								</div>
-								<h3 class="ekit-heading--subtitle elementskit-section-subtitle  ">Billig Klipping</h3>
-								<div class="elementor-button-wrapper">
-									<a 
-										href="+4796984038" target="_blank" id="bestill_hjemmeside">
-										<span class="elementor-button-content-wrapper">
-											<span class="elementor-button-text">Ringe oss</span>
-										</span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<div class="elementor-element elementor-element-394bad61 e-con-full e-flex e-con" data-id="394bad61"
+						<div class="elementor-element elementor-element-394bad61 e-con-full e-flex e-con" data-id="394bad61"
 			data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
 			<div class="elementor-element elementor-element-6c0d541f e-con-full e-flex e-con" data-id="6c0d541f"
 				data-element_type="container"
@@ -826,6 +798,34 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				</div>
 			</div>
 		</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<div class="elementor-element elementor-element-3b271e02 elementor-align-center elementor-invisible elementor-widget elementor-widget-button"
+							data-id="3b271e02" data-element_type="widget"
+							data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:250}"
+							data-widget_type="button.default">
+							<div class="elementor-widget-container">
+								<div class="elementor-button-wrapper">
+									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
+										href="+4796984038" target="_blank" id="bestill_hjemmeside">
+										<span class="elementor-button-content-wrapper">
+											<span class="elementor-button-text">Bestill Time</span>
+										</span>
+									</a>
+								</div>
+								<h3 class="ekit-heading--subtitle elementskit-section-subtitle  ">Billig Klipping</h3>
+								<div class="elementor-button-wrapper">
+									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
+										href="+4796984038" target="_blank" id="bestill_hjemmeside">
+										<span class="elementor-button-content-wrapper">
+											<span class="elementor-button-text">Ringe oss</span>
+										</span>
+									</a>
+								</div>
+							</div>
+						</div>
 		<div class="elementor-element elementor-element-5b3c8674 e-con-full e-flex e-con" data-id="5b3c8674"
 			data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
 			<div class="elementor-element elementor-element-5da712d1 e-con-full e-flex e-con" data-id="5da712d1"
