--- a/index.html
+++ b/index.html
@@ -606,7 +606,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 										Liste</a></li>
 								<li id="menu-item-786"
 									class="menu-item menu-item-type-custom menu-item-object-custom menu-item-786 nav-item elementskit-mobile-builder-content"
-									data-vertical-menu="750px"><a href="#open" class="ekit-menu-nav-link">Åpningstider</a>
+									data-vertical-menu="750px"><a href="#open"
+										class="ekit-menu-nav-link">Åpningstider</a>
 								</li>
 							</ul>
 							<div class="elementskit-nav-identity-panel"><button
@@ -655,12 +656,11 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">
 						<div class="ekit-btn-wraper">
-							<a href="+4796984038" class="elementskit-btn  whitespace--normal"
-								id="heederbook">
+							<a href="tel:+4796984038" class="elementskit-btn  whitespace--normal" id="heederbook">
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
-						
+
 					</div>
 				</div>
 			</div>
@@ -689,8 +689,10 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 									<div
 										class="ekit-heading elementskit-section-title-wraper text_center   ekit_heading_tablet-   ekit_heading_mobile-">
 										<a href="timebestilling/index.html" target="_blank">
-											<h1 class="ekit-heading--title elementskit-section-title ">Alex Frisør&#039;s
-												<span><span>Velvære Salong</span></span></h1>
+											<h1 class="ekit-heading--title elementskit-section-title ">Alex
+												Frisør&#039;s
+												<span><span>Velvære Salong</span></span>
+											</h1>
 										</a>
 										<h2 class="ekit-heading--subtitle elementskit-section-subtitle  ">
 											Rett I Sentrum av Tønsberg
@@ -702,130 +704,140 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								</div>
 							</div>
 						</div>
-						<div class="elementor-element elementor-element-394bad61 e-con-full e-flex e-con" data-id="394bad61"
-			data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
-			<div class="elementor-element elementor-element-6c0d541f e-con-full e-flex e-con" data-id="6c0d541f"
-				data-element_type="container"
-				data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;content_width&quot;:&quot;full&quot;}">
-				<div class="elementor-element elementor-element-64d983ec e-con-full e-flex e-con" data-id="64d983ec"
-					data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
-					<div class="elementor-element elementor-element-28e2e898 elementor-widget__width-auto elementor-widget-laptop__width-initial elementor-widget-mobile__width-initial ekit-equal-height-disable elementor-widget elementor-widget-elementskit-icon-box"
-						data-id="28e2e898" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
-						<div class="elementor-widget-container">
-							<div class="ekit-wid-con"> <!-- link opening -->
-								<a href="+4796984038" class="ekit_global_links">
-									<!-- end link opening -->
+						<br/><br/>
+						<div class="elementor-element elementor-element-394bad61 e-con-full e-flex e-con"
+							data-id="394bad61" data-element_type="container"
+							data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
+							<div class="elementor-element elementor-element-6c0d541f e-con-full e-flex e-con"
+								data-id="6c0d541f" data-element_type="container"
+								data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;content_width&quot;:&quot;full&quot;}">
+								<div class="elementor-element elementor-element-64d983ec e-con-full e-flex e-con"
+									data-id="64d983ec" data-element_type="container"
+									data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
+									<div class="elementor-element elementor-element-28e2e898 elementor-widget__width-auto elementor-widget-laptop__width-initial elementor-widget-mobile__width-initial ekit-equal-height-disable elementor-widget elementor-widget-elementskit-icon-box"
+										data-id="28e2e898" data-element_type="widget"
+										data-widget_type="elementskit-icon-box.default">
+										<div class="elementor-widget-container">
+											<div class="ekit-wid-con"> <!-- link opening -->
+												<a href="tel:+4796984038" class="ekit_global_links">
+													<!-- end link opening -->
 
-									<div
-										class="elementskit-infobox text-left text-left icon-lef-right-aligin elementor-animation- media  ">
-										<div class="elementskit-box-header elementor-animation-">
-											<div class="elementskit-info-box-icon  text-center">
-												<i aria-hidden="true"
-													class="elementkit-infobox-icon jki jki-phone-solid"></i>
+													<div
+														class="elementskit-infobox text-left text-left icon-lef-right-aligin elementor-animation- media  ">
+														<div class="elementskit-box-header elementor-animation-">
+															<div class="elementskit-info-box-icon  text-center">
+																<i aria-hidden="true"
+																	class="elementkit-infobox-icon jki jki-phone-solid"></i>
+															</div>
+														</div>
+														<div class="box-body">
+															<h4 class="elementskit-info-box-title">
+																+47 969 840 38 </h4>
+															<p>Time bestille </p>
+														</div>
+
+													</div>
+												</a>
 											</div>
 										</div>
-										<div class="box-body">
-											<h4 class="elementskit-info-box-title">
-												+47 969 840 38 </h4>
-											<p>Time bestille </p>
-										</div>
-
 									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="elementor-element elementor-element-6f8abdf6 e-con-full e-flex e-con" data-id="6f8abdf6"
-					data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
-					<div class="elementor-element elementor-element-5c94abab elementor-widget__width-auto elementor-widget-laptop__width-initial elementor-widget-mobile__width-initial ekit-equal-height-disable elementor-widget elementor-widget-elementskit-icon-box"
-						data-id="5c94abab" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
-						<div class="elementor-widget-container">
-							<div class="ekit-wid-con"> <!-- link opening -->
-								<a href="https://www.google.com/maps/dir//Amigo’s Barbershop, 1 etasje i gullskogen kjøpe senter, Guldlisten 35, 3048 Drammen"
-									class="ekit_global_links">
-									<!-- end link opening -->
+								</div>
+								<div class="elementor-element elementor-element-6f8abdf6 e-con-full e-flex e-con"
+									data-id="6f8abdf6" data-element_type="container"
+									data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
+									<div class="elementor-element elementor-element-5c94abab elementor-widget__width-auto elementor-widget-laptop__width-initial elementor-widget-mobile__width-initial ekit-equal-height-disable elementor-widget elementor-widget-elementskit-icon-box"
+										data-id="5c94abab" data-element_type="widget"
+										data-widget_type="elementskit-icon-box.default">
+										<div class="elementor-widget-container">
+											<div class="ekit-wid-con"> <!-- link opening -->
+												<a href="https://www.google.com/maps/dir//Amigo’s Barbershop, 1 etasje i gullskogen kjøpe senter, Guldlisten 35, 3048 Drammen"
+													class="ekit_global_links">
+													<!-- end link opening -->
 
-									<div
-										class="elementskit-infobox text-left text-left icon-lef-right-aligin elementor-animation- media  ">
-										<div class="elementskit-box-header elementor-animation-">
-											<div class="elementskit-info-box-icon  text-center">
-												<i aria-hidden="true"
-													class="elementkit-infobox-icon jki jki-target-light"></i>
+													<div
+														class="elementskit-infobox text-left text-left icon-lef-right-aligin elementor-animation- media  ">
+														<div class="elementskit-box-header elementor-animation-">
+															<div class="elementskit-info-box-icon  text-center">
+																<i aria-hidden="true"
+																	class="elementkit-infobox-icon jki jki-target-light"></i>
+															</div>
+														</div>
+														<div class="box-body">
+															<h4 class="elementskit-info-box-title">
+																Rett i midt av sentrum </h4>
+															<p>Storgata 35, 3248 Tønsberg</p>
+														</div>
+
+
+													</div>
+												</a>
 											</div>
 										</div>
-										<div class="box-body">
-											<h4 class="elementskit-info-box-title">
-												Rett i midt av sentrum </h4>
-											<p>Storgata 35, 3248 Tønsberg</p>
-										</div>
-
-
 									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="elementor-element elementor-element-6f4daf7 e-con-full e-flex e-con" data-id="6f4daf7"
-					data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
-					<div class="elementor-element elementor-element-62d7e687 elementor-widget__width-auto elementor-widget-laptop__width-initial elementor-widget-mobile__width-initial ekit-equal-height-disable elementor-widget elementor-widget-elementskit-icon-box"
-						data-id="62d7e687" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
-						<div class="elementor-widget-container">
-							<div class="ekit-wid-con"> <!-- link opening -->
-								<a href="https://goo.gl/maps/93p1UcXsnE4KCv6LA" class="ekit_global_links">
-									<!-- end link opening -->
+								</div>
+								<div class="elementor-element elementor-element-6f4daf7 e-con-full e-flex e-con"
+									data-id="6f4daf7" data-element_type="container"
+									data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
+									<div class="elementor-element elementor-element-62d7e687 elementor-widget__width-auto elementor-widget-laptop__width-initial elementor-widget-mobile__width-initial ekit-equal-height-disable elementor-widget elementor-widget-elementskit-icon-box"
+										data-id="62d7e687" data-element_type="widget"
+										data-widget_type="elementskit-icon-box.default">
+										<div class="elementor-widget-container">
+											<div class="ekit-wid-con"> <!-- link opening -->
+												<a href="https://goo.gl/maps/93p1UcXsnE4KCv6LA"
+													class="ekit_global_links">
+													<!-- end link opening -->
 
-									<div
-										class="elementskit-infobox text-left text-left icon-lef-right-aligin elementor-animation- media  ">
-										<div class="elementskit-box-header elementor-animation-">
-											<div class="elementskit-info-box-icon  text-center">
-												<i aria-hidden="true" class="elementkit-infobox-icon far fa-clock"></i>
+													<div
+														class="elementskit-infobox text-left text-left icon-lef-right-aligin elementor-animation- media  ">
+														<div class="elementskit-box-header elementor-animation-">
+															<div class="elementskit-info-box-icon  text-center">
+																<i aria-hidden="true"
+																	class="elementkit-infobox-icon far fa-clock"></i>
+															</div>
+														</div>
+														<div class="box-body">
+															<h4 class="elementskit-info-box-title">
+																Man-Fre​ 12:00 - 20:00​ </h4>
+															<p>Lørdag​ 09:00 - 19:00​</p>
+														</div>
+
+
+													</div>
+												</a>
 											</div>
 										</div>
-										<div class="box-body">
-											<h4 class="elementskit-info-box-title">
-												Man-Fre​ 12:00 - 20:00​ </h4>
-											<p>Lørdag​ 09:00 - 19:00​</p>
-										</div>
-
-
 									</div>
-								</a>
+								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<div class="elementor-element elementor-element-3b271e02 elementor-align-center elementor-invisible elementor-widget elementor-widget-button"
-							data-id="3b271e02" data-element_type="widget"
-							data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:250}"
-							data-widget_type="button.default">
-							<div class="elementor-widget-container">
-								<div class="elementor-button-wrapper">
-									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
-										href="+4796984038" target="_blank" id="bestill_hjemmeside">
-										<span class="elementor-button-content-wrapper">
-											<span class="elementor-button-text">Bestill Time</span>
-										</span>
-									</a>
-								</div>
-								<h3 class="ekit-heading--subtitle elementskit-section-subtitle  ">Billig Klipping</h3>
-								<div class="elementor-button-wrapper">
-									<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
-										href="+4796984038" target="_blank" id="bestill_hjemmeside">
-										<span class="elementor-button-content-wrapper">
-											<span class="elementor-button-text">Ringe oss</span>
-										</span>
-									</a>
-								</div>
-							</div>
-						</div>
+			data-id="3b271e02" data-element_type="widget"
+			data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:250}"
+			data-widget_type="button.default">
+			<div class="elementor-widget-container">
+				<div class="elementor-button-wrapper">
+					<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
+						href="tel:+4796984038" target="_blank" id="bestill_hjemmeside">
+						<span class="elementor-button-content-wrapper">
+							<span class="elementor-button-text">Bestill Time</span>
+						</span>
+					</a>
+				</div>
+				<h3 class="ekit-heading--subtitle elementskit-section-subtitle  ">Billig Klipping</h3>
+				<div class="elementor-button-wrapper">
+					<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-float"
+						href="tel:+4796984038" target="_blank" id="bestill_hjemmeside">
+						<span class="elementor-button-content-wrapper">
+							<span class="elementor-button-text">Ringe oss</span>
+						</span>
+					</a>
+				</div>
+			</div>
+		</div>
 		<div class="elementor-element elementor-element-5b3c8674 e-con-full e-flex e-con" data-id="5b3c8674"
 			data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
 			<div class="elementor-element elementor-element-5da712d1 e-con-full e-flex e-con" data-id="5da712d1"
@@ -2329,8 +2341,10 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 														class="ekit-heading elementskit-section-title-wraper text_right   ekit_heading_tablet-   ekit_heading_mobile-">
 														<a href="https://goo.gl/maps/JZcdEyrhzMmZt4UW7">
 															<h2 class="ekit-heading--title elementskit-section-title ">5
-																<span><span>av 5</span></span></h2>
-														</a></div>
+																<span><span>av 5</span></span>
+															</h2>
+														</a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -2339,7 +2353,6 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											data-widget_type="star-rating.default">
 											<div class="elementor-widget-container">
 												<style>
-													
 													.elementor-star-rating {
 														color: #ccd6df;
 														font-family: eicons;
@@ -2630,7 +2643,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 						data-widget_type="heading.default">
 						<div class="elementor-widget-container">
 							<h2 class="elementor-heading-title elementor-size-default">Alex Frisør's
-								<br>Velvære Salong</h2>
+								<br>Velvære Salong
+							</h2>
 						</div>
 					</div>
 					<div class="elementor-element elementor-element-77f808fc e-con-full e-flex elementor-invisible e-con"
@@ -2673,7 +2687,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 								data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="+4796984038" class="ekit_global_links">
+										<a href="tel:+4796984038" class="ekit_global_links">
 											<!-- end link opening -->
 
 											<div
@@ -2738,8 +2752,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 												</a>
 											</li>
 											<li class="elementor-repeater-item-7ac520b">
-												<a href="https://www.instagram.com/Alexfrisor/"
-													aria-label="Instagram" class="instagram">
+												<a href="https://www.instagram.com/Alexfrisor/" aria-label="Instagram"
+													class="instagram">
 													Instagram
 													<i aria-hidden="true" class="fab fa-instagram"></i>
 												</a>
@@ -2879,8 +2893,8 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 			<div class="elementor-element elementor-element-d8e4181 elementor-widget elementor-widget-heading"
 				data-id="d8e4181" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h6 class="elementor-heading-title elementor-size-default"><a
-							href="http://altlokal.no/">utviklet & drift av ALTLOKAL.no</a></h6>
+					<h6 class="elementor-heading-title elementor-size-default"><a href="http://altlokal.no/">utviklet &
+							drift av ALTLOKAL.no</a></h6>
 				</div>
 			</div>
 			<div class="elementor-element elementor-element-302ba0fa elementor-widget__width-auto elementor-widget elementor-widget-elementskit-button"
@@ -2888,12 +2902,12 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">
 						<div class="ekit-btn-wraper">
-							<a class="elementskit-btn  whitespace--normal" id="footerbook" href="+4796984038">
+							<a class="elementskit-btn  whitespace--normal" id="footerbook" href="tel:+4796984038">
 								<i aria-hidden="true" class="fas fa-cut"></i>
 								Bestill time </a>
 						</div>
+					</div>
 				</div>
-			</div>
 		</header>
 	</div>
 
