--- a/index.html
+++ b/index.html
@@ -695,16 +695,16 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											</h1>
 										</a>
 										<h2 class="ekit-heading--subtitle elementskit-section-subtitle  ">
-											Rett I Sentrum av Tønsberg
+											Hver Hodet Klippet, Tells!
 										</h2>
 										<div class='ekit-heading__description'>
-											<p>Alex Frisør&#039;s - svært rimelige priser </p>
+											<p>Tønsberg Frisør&#039;s - svært rimelige priser </p>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<br/><br/>
+						
 						<div class="elementor-element elementor-element-394bad61 e-con-full e-flex e-con"
 							data-id="394bad61" data-element_type="container"
 							data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
