--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ wp.i18n.setLocaleData( { 'text direction\u0004ltr': [ 'ltr' ] } );
 											</h1>
 										</a>
 										<h2 class="ekit-heading--subtitle elementskit-section-subtitle  ">
-											Hver Hodet Klippet, Tells!
+											Hver Hodet Klippet, Teller!
 										</h2>
 										<div class='ekit-heading__description'>
 											<p>Tønsberg Frisør&#039;s - svært rimelige priser </p>
